Implementação completa das automações avançadas
 Novas automações adicionadas:
- Validação automática de CPF, email e datas
- Salvamento automático no localStorage
- Valores padrão inteligentes (contrato, data, dia vencimento)
- Cálculos avançados (idade, desconto automático)
- Sistema de tratamento de erros
- Notificações visuais de validação
- Arquivo de teste completo das funcionalidades

 Melhorias de interface:
- Estilos para campos válidos/inválidos
- Animações de feedback
- Mensagens de erro contextualizadas
- Indicadores de progresso

 Sistema de testes:
- Página de teste completa (teste-automacoes-completo.html)
- Diagnóstico do sistema
- Testes automatizados de todas as funcionalidades

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <!-- Folha de estilos -->
   <link rel="stylesheet" href="src/styles/styles.css">
+  <link rel="stylesheet" href="src/styles/validations.css">
   <link rel="stylesheet" href="src/auto-calc/styles.css">
   
   <!-- Bibliotecas externas -->
@@ -229,6 +230,7 @@
   <!-- Módulos JavaScript da aplicação -->
   <script src="src/core/exports.js"></script>
   <script src="src/core/python-examples.js"></script>
+  <script src="src/core/advanced-automations.js"></script>
   <script src="src/core/main.js"></script>
 </head>
 <body>
