REORGANIZAÇÃO COMPLETA DO PROJETO
 Estrutura totalmente reorganizada:
- Removidos arquivos duplicados e legados
- Testes organizados em pasta específica com índice
- Arquivos renomeados para padrão consistente
- Ferramentas movidas para pasta tools/

 Arquivos removidos:
- calculations-compatible.js (duplicata)
- calculations-test.js (movido para tests/)
- debug-*.html (arquivos legados)
- src/core/automatic-calculations.js (duplicata)
- src/core/auto-calc-init.js (duplicata)
- backup files

 Arquivos movidos e renomeados:
- src/styles/styles.css  main.css
- src/core/advanced-automations.js  automations.js
- Todos os testes movidos para tests/ com nomes padronizados
- download-libs.bat  tools/

 Novos arquivos:
- tests/index.html (índice completo de testes)
- FINAL_STRUCTURE.md (documentação da estrutura)
- REORGANIZATION_PLAN.md (plano de reorganização)

 Benefícios:
- Zero duplicatas
- Estrutura clara e organizada
- Fácil navegação e manutenção
- Testes centralizados com interface amigável

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Gerador de Contratos (Web)</title>
   
   <!-- Folha de estilos -->
-  <link rel="stylesheet" href="src/styles/styles.css">
+  <link rel="stylesheet" href="src/styles/main.css">
   <link rel="stylesheet" href="src/styles/validations.css">
   <link rel="stylesheet" href="src/auto-calc/styles.css">
   
@@ -230,7 +230,7 @@
   <!-- Módulos JavaScript da aplicação -->
   <script src="src/core/exports.js"></script>
   <script src="src/core/python-examples.js"></script>
-  <script src="src/core/advanced-automations.js"></script>
+  <script src="src/core/automations.js"></script>
   <script src="src/core/main.js"></script>
 </head>
 <body>
